Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriBooleanRetIntObj.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        boolean two = true
        Yoda<Boolean, boolean, Integer> yoda
        Integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
