Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBooleanRetIntObjFail.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, Integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
